Added Uranium Crystal, W

--- a/src/main/resources/assets/testmod/lang/en_us.json
+++ b/src/main/resources/assets/testmod/lang/en_us.json
@@ -2,5 +2,6 @@
   "item.testmod.uranium": "Uranium Crystal",
   "item.testmod.uranium_blob": "Uranium Blob",
 
-  "block.testmod.uranium_block:": "Block of Uranium"
+  "block.testmod.uranium_block": "Block of Uranium",
+  "block.testmod.uranium_crystal": "Uranium Cluster"
 }
